# beangrep

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
beangrep/: __init__.py  beangrep.py  test_beangrep.py
data/: man-extras.h2m
dev/: coverage  tag-release  update_readme.sh
python/mybeancount/beangrep/: .gitignore  __init__.py  beangrep.py  test_beangrep.py
src/beangrep/: __init__.py  __main__.py  beangrep.py  cli.py
tests/: test_beangrep.py  test_cli.py
tests/data/: example.beancount  small.beancount
tests/data/documents/: statements.txt
